--- a/style.css
+++ b/style.css
@@ -1,11 +1,85 @@
-.container {
+@font-face {
+  font-family: 'Montserrat';
+  src: url("assets/fonts/Montserrat-Medium.ttf");
+  font-weight: 400;
+}
+@font-face {
+  font-family: 'Hind';
+  src: url("assets/fonts/Hind-Regular.ttf");
+  font-weight: 300;
+}
+
+html {
+  scroll-behavior: smooth; 
+  padding: 0;
+}
+ul {
+  margin: 0;
+}
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background-color: rgb(0, 2, 49);
+  color: rgb(222, 222, 222);
+  font-family: 'Hind', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.5;
+  min-height: 100vh;
+  margin: 0; 
+  padding: 0;
+}
+.header {
+  background-color: #6476ff;
+}
+ .container {
   max-width: 1280px;
   margin: 0 auto;
 }
+.main-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.section {
+  width: 50%;
+}
+.nav {
+  max-width: 1280px;
+  margin: 0 auto;
+}
+.nav-list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+}
+.nav-link {
+  padding: 0 20px;
+  line-height: 50px;
+  color: rgb(2, 255, 255);
+  text-decoration: none;
+  font-size: 20px;
+  transition: .3s;
+}
+.nav-link:hover {
+  color: rgb(0, 173, 173);
+}
+
 .name {
   color: #7300ff;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 32px;
+}
+.avatar {
+  border-radius: 75px;
 }
 .subtitle {
+  font-size: 20px;
+  font-weight: 400;
+  text-transform: uppercase;
   color: rgb(0, 106, 255);
 }
 .code {
@@ -15,4 +89,25 @@
 }
 .value {
   color: #dd00ff;
+}
+.footer {
+  background-color: #6476ff;
+}
+.footer-section {
+  max-width: 1280px;
+  margin: 0 auto;
+  text-align: center;
+}
+.footer-year {
+  color: #000;
+  font-size: 32px;
+  margin-bottom: 0;
+}
+svg-link {
+  cursor: pointer;
+}
+@media (max-width: 768px) {
+  .section {
+    width: 100%;
+  }
 }
